fix: white space between contact page and screen bottom

--- a/styles/contacts/contacts_list.css
+++ b/styles/contacts/contacts_list.css
@@ -425,6 +425,10 @@
   }
 }
 
+.mobile_menu_button {
+  display: none;
+}
+
 /* ================== RESPONSIVE DESIGN ================== */
 @media (max-width: 1240px) {
   /* Header Layout ändern - vertikal statt horizontal */
